@@ -101,6 +101,7 @@ class PostgreSQLAdapter(object):
                 connmanager=self.connmanager,
                 runner=self.runner,
                 locker=self.locker,
+                options=options,
                 )
             self.dbiter = HistoryPreservingDatabaseIterator(
                 runner=self.runner,
@@ -110,6 +111,7 @@ class PostgreSQLAdapter(object):
                 connmanager=self.connmanager,
                 runner=self.runner,
                 locker=self.locker,
+                options=options,
                 )
             self.dbiter = HistoryFreeDatabaseIterator(
                 runner=self.runner,
