@@ -346,8 +346,10 @@ history_preserving_schema = """
         # whose references need to be examined.
         CREATE GLOBAL TEMPORARY TABLE temp_pack_visit (
             zoid        NUMBER(20) NOT NULL PRIMARY KEY,
-            keep_tid    NUMBER(20)
+            keep_tid    NUMBER(20) NOT NULL
         );
+        CREATE UNIQUE INDEX temp_pack_visit_zoid ON temp_pack_visit (zoid);
+        CREATE INDEX temp_pack_keep_tid ON temp_pack_visit (keep_tid)
 
         # Temporary state during undo: a list of objects
         # to be undone and the tid of the undone state.
@@ -355,6 +357,7 @@ history_preserving_schema = """
             zoid        NUMBER(20) NOT NULL PRIMARY KEY,
             prev_tid    NUMBER(20) NOT NULL
         );
+        CREATE UNIQUE INDEX temp_undo_zoid ON temp_undo (zoid)
 """
 
 history_preserving_init = """
@@ -647,8 +650,10 @@ history_free_schema = """
         # whose references need to be examined.
         CREATE GLOBAL TEMPORARY TABLE temp_pack_visit (
             zoid        NUMBER(20) NOT NULL PRIMARY KEY,
-            keep_tid    NUMBER(20)
+            keep_tid    NUMBER(20) NOT NULL
         );
+        CREATE UNIQUE INDEX temp_pack_visit_zoid ON temp_pack_visit (zoid);
+        CREATE INDEX temp_pack_keep_tid ON temp_pack_visit (keep_tid)
 """
 
 history_free_init = """
