@@ -481,7 +481,8 @@ class GenericRelStorageTests(
     def checkPackDutyCycle(self):
         # Exercise the code in the pack algorithm that releases the
         # commit lock for a time to allow concurrent transactions to commit.
-        self._storage._options.pack_batch_timeout = 0  # pause after every txn
+        # pause after every txn
+        self._storage._adapter.packundo.options.pack_batch_timeout = 0
 
         slept = []
         def sim_sleep(seconds):
